fix: correct base path for GitHub Pages deployment
- Update vite.config.js base path to /jirachatbot/
- Fix 404.html redirect to work with base path
- Rebuild with correct configuration

--- a/public/404.html
+++ b/public/404.html
@@ -9,7 +9,8 @@
       const path = window.location.pathname;
       const search = window.location.search;
       const hash = window.location.hash;
-      window.location.replace('/' + '?p=' + encodeURIComponent(path) + search + hash);
+      const basePath = '/jirachatbot/';
+      window.location.replace(basePath + '?p=' + encodeURIComponent(path.replace(basePath, '/')) + search + hash);
     </script>
   </head>
   <body>
