fix: set correct base path for custom domain www.jirachatbot.com
- Change vite.config.js base from '/jirachatbot/' to '/' for custom domain
- Fix 404.html redirect for custom domain
- Rebuild with correct configuration
- Asset paths now correctly resolve to root

--- a/public/404.html
+++ b/public/404.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <title>JiraChatbot</title>
     <script>
-      // GitHub Pages SPA redirect
+      // GitHub Pages SPA redirect for custom domain
       // Redirects all 404s to index.html for React Router to handle
       const path = window.location.pathname;
       const search = window.location.search;
       const hash = window.location.hash;
-      const basePath = '/jirachatbot/';
-      window.location.replace(basePath + '?p=' + encodeURIComponent(path.replace(basePath, '/')) + search + hash);
+      window.location.replace('/' + '?p=' + encodeURIComponent(path) + search + hash);
     </script>
   </head>
   <body>
